# Rust-Learning

./: README.md
BinaryTree/src/: main.rs
Linked-List/: Cargo.toml
Linked-List/src/: main.rs  safe.rs  unsafe_list.rs
actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
actix-gcd/static/: index.html  style.css
first-router/: Cargo.toml
first-router/src/: main.rs
many-routers/: Cargo.toml  questions.json  test_api.sh
many-routers/src/: main.rs
mnist-rust/: Cargo.toml
mnist-rust/burn-mnist-wgpu/: config.json  model.mpk
mnist-rust/burn-mnist-wgpu/checkpoint/: model-10.mpk  model-8.mpk  model-9.mpk  optim-10.mpk  optim-8.mpk  optim-9.mpk
mnist-rust/src/: data.rs  inference.rs  lib.rs  main.rs  mnist.rs  model.rs  training.rs
mnist-web/: Cargo.toml  build-for-web.sh  index.html  index.js
mnist-web/src/: lib.rs  state.rs  web.rs
wgpu-rs-learn/: Cargo.toml  README.md  build-web.sh
wgpu-rs-learn/shaders/: burning_ship.wgsl  compute_shader.wgsl  first_shader.wgsl  graphic_shader.wgsl  julia.wgsl  mandelbrot.wgsl  multibrot.wgsl  newton.wgsl  render_fractal.wgsl  tricorn.wgsl
wgpu-rs-learn/src/: fractal.rs  main.rs
