[package]
name = "wgpu-rs-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26"
winit = { version = "0.30", features = ["android-native-activity"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
futures = "0.3"

# Only for wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }